<resources>
    <string name="app_name">CodersNotebook</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_menu_screen_01">menu_screen_01</string>
    <string name="title_activity_splash">Splash</string>
    <string name="title_activity_css">CSS</string>
    <string name="html_title">HTML hints</string>
    <string name="css_title">CSS hints</string>
    <string name="logo">picture</string>
    <string name="contact_me">Contact me</string>
    <string name="information"> Information </string>
    <string name="about_project_title01">About project</string>
    <string name="about_project_title02"> Author(s) </string>
    <string name="about_project_01"> Application is made as a part of college individual project. \n
    The main idea of this project is to put together as much information as possible to help beginner developers.
    Application does not require internet access, so information is always in your pocket.</string>
    <string name="about_project_02"> \n Maria Kazydub \n</string>
    <string name="explore">EXPLORE</string>
    <string name="logo1">html_logo_1</string>
    <string name="html_title_name1">Start to build</string>
    <string name="html_title_name1_content1">Basic code that will help beginner to build any HTML page from scratch and also open it in WEB browser.
    Explained how to save file correctly.</string>
    <string name="title_activity_html_content_01">html_content_01</string>
    <string name="html_01_tutor_01">To start to build a website we do not need any fancy programms and extra software.
    Any computer will be able to do the job, regardless its specifications.\n
    So we begin ... </string>
    <string name="html_01_tutor_02">Open Notepad (preinstalled on all Windows machines), icon on the left, or download Notepad ++,
    icon on the right. Believe it or not, that is basically  the software that is used for creating most of the programms.
    Then add code below and save file as index.html. Or give any other name, but keep .html extention.</string>
    <string name="html_01_tutor_03"> <![CDATA[
    <html> \n
    <title> </title> \n
    <body> \n

    This is my first page \n
    </body> \n

   </html>
    ]]>  </string>
    <string name="notepad">notepad</string>
    <string name="logo2">html_logo_2</string>
    <string name="html_title_name2">Fonts</string>
    <string name="html_title_name2_content2">Explanation of font sizes \n
        Make your text smaller, bigger, just as you like it.\n
        Also provided some examples for changing font faces, so you will be able to make your page look more beautiful
    </string>
    <string name="html_02_tutor_01">
       In HTML font is separated into different groups. One group is for displaying headings and another to display content.
        But you can use any font as you like. \n
        Please note that all content goest into BODY part of a page. In the future only code from body part will be displayed.
        Here is a sample of header font. It has 6 sizes and it is bold by default.
    </string>
    <string name="html_02_tutor_02"><![CDATA[
    <body> \n

    <h1> Size 1 </h1> \n
    <h2> Size 2 </h2> \n
    <h3> Size 3 </h3> \n
    <h4> Size 4 </h4> \n
    <h5> Size 5 </h5> \n
    <h6> Size 6 </h6> \n
    </body> \n
    ]]>
    </string>
    <string name="html_02_tutor_03">To display content and align text on a page paragraphs are used.
    When paragraph tag is used browser will create additional space before and after text and next paragraph will aotomatically start
        on new line.
    \n
    Tags can contain another tags inside for example, if you want to make text bigger, change a color of a certain word
    or insert a hyperlink.</string>
    <string name="html_02_tutor_04"><![CDATA[
        <p> <font size="1"> font size 1</font> </p> \n
        <p> <font size="2"> font size 2</font> </p> \n
        <p> <font size="6"> font size 6 </font> </p> \n
        <p> <font size="3"> font size 3</font> </p> \n
        <p> <font size="7"> font size 7 </font> </p> \n
        <p> <font size="4"> font size 4 </font> </p> \n
        <p> <font size="5"> font size 5 </font> </p> \n

        ]]>
    </string>
    <string name="html_02_tutor_05"> <![CDATA[
    <font face="Cracked" size="4"> Cracked font</font> <br> \n
    <font face="ArCSI"> ArCSI font </font> <br> \n
    <font face="Rockwell"> Rockwell font </font> <br> \n
    <font face="Comic sans MS"> Comic sans MS font </font> <br> \n
    <font face= "Verdana"> Verdana font </font> <br> \n
    <font face="Skia"> Skia font </font> <br> \n

    ]]>
    </string>
    <string name="html_02_tutor_06"> Here br tag is used to break the line and start next element on the next line. \n
        In one of the next chapter you will see other tags for page layout.
    </string>
    <string name="html_02_tutor_07"> In other words, any font you see in Word or another text editor can be used
     on your page in font face.</string>
    <string name="html_02_tutor_08"> You can highlight separate words by color or type (bold, italic, underlined).
    Please note that links are underlined by default. </string>
    <string name="html_02_tutor_09"> <![CDATA[
    <font face="Skia" size="6" color="#ff0000"> Skia font </font> <br> \n
    <font size="6" face="Rockwell" color="blue"> Rockwell font </font> <br>
    ]]>
    </string>
    <string name="html_02_tutor_10"> <![CDATA[
    <b> bold text </b> <br> \n
    <font size="5"> <u> underlined text </u> </font> <br> \n
    <font size="3"> <i> italic text  </i> </font> <br>
    ]]></string>
    <string name="logo3">html_logo_3</string>
    <string name="html_title_name3">Tables</string>
    <string name="html_title_name3_content3"> Explanation of tables. \n
    How and where to use them, how to structure tables and make them invisible on a page. \n
    </string>
    <string name="html_03_tutor_01"> Tables are used to arrange different information on a page, such as text or picturs and
    make design nice and clean. \n
        Tables can be visible or invisible for a user. All that is done by setting table border parameters.\n
        Every table is made of table rows (tr) and table data(td). \n
        By default table borders are invisible, but by adding "border = 1", border will apper.
        Number can vary, depending how you want your table to look like. \n
        Here are some examples..
    </string>
    <string name="html_03_tutor_02"><![CDATA[
    <table border="1"> \n
	<tr> \n
	    <td> John  </td> \n
		<td> Smith </td> \n
	</tr> \n

    </table> \n ]]>
    </string>
    <string name="html_03_tutor_03">
        <![CDATA[
        <table> \n
	       <tr> \n
            <td bgcolor="yellow"> John  </td> \n
            <td bgcolor="00FF00"> Smith </td> \n
        </tr> \n

        </table> \n

        ]]>
    </string>
    <string name="html_03_tutor_04"> Here bgcolor is used to show how to change background color
        and also display two table columns </string>
    <string name="html_03_tutor_05">Other, more complicated, examples of arranging cells in tables </string>
    <string name="html_03_tutor_06"> <![CDATA[
    <table border="1"> \n
	<tr>  \n
		<td colspan="2"> Avengers  </td> \n

	</tr> \n
	<tr> \n
		<td> Tony </td> \n
		<td> Stark </td> \n
	</tr> \n
	<tr> \n
		<td> Bruce </td> \n
		<td> Banner </td> \n
	</tr> \n

    </table> \n
    ]]>

    </string>
    <string name="html_03_tutor_07"> Colspan is used to merge columns into one.
        Rows can be merged together as well. Number of columns or rows to merge can be equal or less than number of
    columns above or below and than number of columns to the right or to the left.</string>
    <string name="html_05_tutor_06"> <![CDATA[
        <a href="pictures/image.jpg"> click to see picture </a>
    ]]>

    </string>
    <string name="html_05_tutor_07"> Link will look like text, similar to the previous example, but text ill be different.\n
        But after clicking on that link picture from your local directory will be opened. >>>
    </string>
    <string name="html_05_tutor_08"> <![CDATA[
    <a href="http://www.websitename"> \n
    <img src="pictures/image.jpg"> \n
    </a>
    ]]> </string>
    <string name="html_05_tutor_09"> Picture can be modified and resized by adding parameters for size </string>
    <string name="html_05_tutor_10"> So now picture is clickable and will open any website or page it is refferenced to. 
    To link picture to another page on the same website use code below
    </string>
    <string name="html_05_tutor_11"> <![CDATA[
    <a href="index.html"> \n
    <img src="pictures/image.jpg"> \n
    </a>
    ]]> </string>
    <string name="html_05_tutor_12"> In this example simply add page you want user to go within the same website into
    <![CDATA[ <a>]]> tag after href=
    </string>
    <string name="html_title_name6"> Other useful tags </string>
    <string name="html_06_tutor_01"> Most pages use other elements there to separate content, add lines etc. \n
    Here is a list of these elements to help to make page look better. These tags can be inserted into text, around words,
        after paragraphs. Just anywhere where you feel like adding it.</string>
    <string name="html_06_tutor_02"> <![CDATA[ <br>  ]]> tag is used to insert a horizontal break between two elements.
    If you want ot have a bigger break simply put few <![CDATA[ <br> ]]> one after another. \n
    For example
    <![CDATA[  <br> <br> <br>]]> \n
    or \n
    <![CDATA[ <br> \n <br> \n <br>]]></string>
    <string name="html_06_tutor_03"> one break here </string>
    <string name="html_06_tutor_04"> three breaks here </string>
    <string name="html_title_name7"> Div(s)</string>
    <string name="html_07_tutor_01"> Div tags are used to place elements on the positions you want them to be.\n
    They can be used to create page layout as well as tables. Div elements can contain another div elements or other
    elemtns, like paragraphs ( <![CDATA[ <p> </p> ]]> ) text fields, pictures and other. </string>
    <string name="html_07_tutor_02"> If there are many div elements in your program, would be useful to separate them somehow.
    To do that we add there additional parameters that can be id or class. \n
    id is unique name for div element and same id name cannot occur more that once \n
    class can occur many times. For example if later you want to set the same parameters for all elements with the same class,
        they become useful. \nTo access id in CSS . operator is used. Eg. .songname\n
    To access element by id # operator is used. Eg. #songauthor \n
    By default, if no size parameters are set, div will take the lenght of the screen. </string>
    <string name="html_07_tutor_03"> <![CDATA[
    <div style="background: blue;"> text1 </div> \n
    <div style="background:red"> text2</div>
    ]]>
    </string>
    <string name="html_07_tutor_04"><![CDATA[
        <div style="background: blue; width: 40px"> text1 </div> \n
        <div style="background:yellow; width: 50px"> text2</div>
    ]]></string>
    <string name="html_07_tutor_subtitle"> Positioning</string>
    <string name="html_07_tutor_05">Position of div elements can be absolute, fixed or relative.\n
    Position starts from the top left corner of the screen. \n
        Absolute: \n
        Pretty easy to start with, as each element will stay on its own position even if window size is changed.
    </string>
    <string name="html_07_tutor_06"><![CDATA[
    <div style="position: absolute; top: 70px; left: 20px; width: 50px; background-color: red;">
    div content here
    </div> \n
    <div style="position: absolute; top: 10px; left: 75px; width: 50px; height: 150px; background-color: blue;">
    div content here
    </div> \n
    <div style="position: absolute; top: 25px; left: 130px; width: 60px; height: 125px; background-color: yellow;">
    div content here
    </div>
    ]]></string>
</resources>