<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fcebc0">

    <RelativeLayout
        android:id="@+id/RelativeLayout01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/html_title_name6"
            android:id="@+id/html_title"
            android:background="#e27704"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="false"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="false"
            android:gravity="center"
            android:textColor="#fefcfc"
            android:textStyle="bold">
        </TextView>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:showDividers="beginning|middle|end"
            android:layout_below="@+id/html_title"
            android:visibility="visible"
            android:background="#f7c79f"
            android:id="@+id/linearLayout"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/html_06_tutor_01"
                    android:id="@+id/textView01"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="false"
                    android:layout_alignParentEnd="false"
                    android:paddingTop="0dp" />

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#daa87d"
            android:layout_below="@+id/linearLayout"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/linearLayout2"
            android:weightSum="1">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/html_06_tutor_02"
                    android:id="@+id/textView25"
                    android:padding="2dp"
                    android:background="#ce9b6e"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView15"
                    android:src="@drawable/html_result_16"
                    android:layout_below="@+id/textView25"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView16"
                    android:src="@drawable/html_result_17"
                    android:layout_below="@+id/textView25"
                    android:layout_alignRight="@+id/textView25"
                    android:layout_alignEnd="@+id/textView25" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/html_06_tutor_03"
                    android:id="@+id/textView34"
                    android:textSize="10sp"
                    android:padding="2dp"
                    android:background="#ce9b6e"
                    android:layout_alignTop="@+id/textView35"
                    android:layout_toRightOf="@+id/imageView15"
                    android:layout_toEndOf="@+id/imageView15"
                    android:layout_marginLeft="5dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/html_06_tutor_04"
                    android:id="@+id/textView35"
                    android:textSize="10sp"
                    android:padding="2dp"
                    android:background="#ce9b6e"
                    android:layout_alignTop="@+id/imageView16"
                    android:layout_toLeftOf="@+id/imageView16"
                    android:layout_toStartOf="@+id/imageView16"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="5dp" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#f7c79f"
            android:layout_below="@+id/linearLayout2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/linearLayout3"
            android:weightSum="1">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/html_05_tutor_06"
                    android:id="@+id/textView27"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:background="#eb9898"
                    android:padding="2dp"/>

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/html_05_tutor_07"
                    android:id="@+id/textView28"
                    android:textSize="10sp"
                    android:layout_below="@+id/textView27"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:padding="2dp"
                    android:layout_marginTop="5dp"
                    android:background="#e7bfbf" />

                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="100dp"
                    android:id="@+id/imageView17"
                    android:layout_alignTop="@+id/textView28"
                    android:layout_alignRight="@+id/textView27"
                    android:layout_alignEnd="@+id/textView27"
                    android:src="@drawable/html_result_15"
                    android:layout_toEndOf="@+id/textView28"
                    android:layout_toRightOf="@+id/textView28" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/html_05_tutor_08"
                    android:id="@+id/textView29"
                    android:padding="2dp"
                    android:background="#eb9898"
                    android:layout_below="@+id/imageView17"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="20dp" />

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/html_05_tutor_09"
                    android:id="@+id/textView30"
                    android:textSize="10sp"
                    android:padding="2dp"
                    android:background="#e7bfbf"
                    android:layout_alignTop="@+id/textView29"
                    android:layout_alignRight="@+id/imageView17"
                    android:layout_alignEnd="@+id/imageView17"
                    android:layout_toRightOf="@+id/textView29"
                    android:layout_toEndOf="@+id/textView29" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/html_05_tutor_10"
                    android:id="@+id/textView31"
                    android:layout_below="@+id/textView29"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/html_05_tutor_11"
                    android:id="@+id/textView32"
                    android:layout_below="@+id/textView31"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:padding="2dp"
                    android:background="#eb9898" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/html_05_tutor_12"
                    android:id="@+id/textView33"
                    android:textSize="10sp"
                    android:layout_alignTop="@+id/textView32"
                    android:layout_alignLeft="@+id/imageView17"
                    android:layout_alignStart="@+id/imageView17"
                    android:background="#e7bfbf"
                    android:padding="2dp" />
            </RelativeLayout>






        </LinearLayout>


    </RelativeLayout>

</ScrollView>