<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fcebc0">

    <RelativeLayout
        android:id="@+id/RelativeLayout01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/html_title_name7"
            android:id="@+id/html_title"
            android:background="#0f620c"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="false"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="false"
            android:gravity="center"
            android:textColor="#fefcfc"
            android:textStyle="bold">
        </TextView>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:showDividers="beginning|middle|end"
            android:layout_below="@+id/html_title"
            android:visibility="visible"
            android:background="#a7d290"
            android:id="@+id/linearLayout"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/html_07_tutor_01"
                    android:id="@+id/textView01"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="false"
                    android:layout_alignParentEnd="false"
                    android:paddingTop="0dp" />

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#86b46e"
            android:layout_below="@+id/linearLayout"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/linearLayout2"
            android:weightSum="1">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/html_07_tutor_02"
                    android:id="@+id/textView25"
                    android:padding="2dp"
                    android:background="#7cac63"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView15"
                    android:src="@drawable/html_result_21"
                    android:layout_below="@+id/textView25"
                    android:layout_marginTop="10dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/html_07_tutor_03"
                    android:id="@+id/textView34"
                    android:padding="2dp"
                    android:background="#7cac63"
                    android:layout_toRightOf="@+id/imageView15"
                    android:layout_toEndOf="@+id/imageView15"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_below="@+id/textView25" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView22"
                    android:layout_below="@+id/textView34"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="31dp"
                    android:src="@drawable/html_result_22" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/html_07_tutor_04"
                    android:id="@+id/textView47"
                    android:padding="2dp"
                    android:background="#7cac63"
                    android:layout_alignTop="@+id/imageView22"
                    android:layout_toRightOf="@+id/imageView15"
                    android:layout_toEndOf="@+id/imageView15" />

            </RelativeLayout>
        </LinearLayout>



        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/html_07_tutor_subtitle"
            android:background="#289124"
            android:layout_below="@+id/linearLayout2"
            android:gravity="center"
            android:textColor="#fefcfc"
            android:textStyle="bold"
            android:id="@+id/subtitle">
        </TextView>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#b9d7b0"
            android:layout_below="@+id/subtitle"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/linearLayout4">



            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/html_07_tutor_05"
                    android:id="@+id/textView40"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/html_07_tutor_06"
                    android:id="@+id/textView48"
                    android:layout_below="@+id/textView40"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:padding="2dp"
                    android:background="#a6ca9c"
                    android:layout_marginTop="5dp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView23"
                    android:layout_below="@+id/textView48"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/html_result_23" />



            </RelativeLayout>

        </LinearLayout>

    </RelativeLayout>

</ScrollView>